--- a/challenge3/docker-compose.yml
+++ b/challenge3/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   nginx:
@@ -17,8 +17,8 @@ services:
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_DATABASE=${DB_DATABASE}
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     networks:
       - app-network
 
